include_directories(.)

add_library(rrr
    base/all.hpp
    base/basetypes.cpp
    base/basetypes.hpp
    base/debugging.cpp
    base/debugging.hpp
    base/logging.cpp
    base/logging.hpp
    base/misc.cpp
    base/misc.hpp
    base/strop.cpp
    base/strop.hpp
    base/threading.cpp
    base/threading.hpp
    base/unittest.cpp
    base/unittest.hpp
    misc/alarm.hpp
    misc/alock.cpp
    misc/alock.hpp
    misc/cpuinfo.hpp
    misc/dball.hpp
    misc/marshal.cpp
    misc/marshal.hpp
    misc/rand.cpp
    misc/rand.hpp
    misc/recorder.cpp
    misc/recorder.hpp
    misc/stat.hpp
    mq/buf.cpp
    mq/buf.h
    mq/client.cpp
    mq/client.h
    mq/polling.cpp
    mq/polling.h
    mq/rpc.cpp
    mq/rpc.h
    mq/rpc_comm.h
    mq/server.cpp
    mq/server.h
    pylib/simplerpc/_pyrpc.cpp
    rpc/client.cpp
    rpc/client.hpp
    rpc/polling.cpp
    rpc/polling.hpp
    rpc/server.cpp
    rpc/server.hpp
    rpc/utils.cpp
    rpc/utils.hpp
    utils/hostname.h
    utils/logger.h
    utils/mht.h
    utils/mlock.h
    utils/mpr_dag.h
    utils/mpr_hash.h
    utils/mpr_queue.h
    utils/mpr_thread_pool.h
    utils/mtime.h
    utils/safe_assert.h
    event/fastStackAllocator.cpp
    event/scheduler.cpp
    rrr.h
    rrr.hpp
)